--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <h2 class="section-title">Featured Product</h2>
             <div class="product-grid">
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="gun massager.jpg" alt="Gun Massager">
+                    </div>
                     <div class="product-price">Starting ₹799</div>
                     <h3 class="product-name">Gun Massager</h3>
                     <p class="product-details">LLP-Lang | 2018</p>
@@ -61,14 +64,23 @@
             <h2 class="section-title">Revamp Your Home in Style</h2>
             <div class="product-grid">
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="cover.png" alt="Cashier Covers">
+                    </div>
                     <h3 class="product-name">Cashier Covers, Bookheers & More</h3>
                     <a href="#" class="see-more">Explore all</a>
                 </div>
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="rug.jpg" alt="Updrag Solutions">
+                    </div>
                     <h3 class="product-name">Updrag Solutions</h3>
                     <a href="#" class="see-more">See more</a>
                 </div>
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="coffee machine.jpg" alt="Settling Machines">
+                    </div>
                     <h3 class="product-name">Settling Machines</h3>
                     <a href="#" class="see-more">See more</a>
                 </div>
@@ -80,14 +92,23 @@
             <h2 class="section-title">Appliances for Your Home | Up to 55% off</h2>
             <div class="product-grid">
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="aircon.png" alt="Air Conditioners">
+                    </div>
                     <h3 class="product-name">Air Conditioners</h3>
                     <a href="#" class="see-more">See more</a>
                 </div>
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="fridge.jpg" alt="Refrigerators">
+                    </div>
                     <h3 class="product-name">Refrigerators</h3>
                     <a href="#" class="see-more">See more</a>
                 </div>
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="oven.png" alt="Microwaves">
+                    </div>
                     <h3 class="product-name">Microwaves</h3>
                     <a href="#" class="see-more">See more</a>
                 </div>
@@ -99,17 +120,26 @@
             <h2 class="section-title">Headphones & Audio</h2>
             <div class="product-grid">
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="headphone.jpg" alt="Headphones">
+                    </div>
                     <div class="product-price">Starting ₹149</div>
                     <h3 class="product-name">Headphones</h3>
                     <p class="product-details">BOULT | ZEBRONICS</p>
                     <a href="#" class="see-more">See all offers</a>
                 </div>
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="ipod.jpeg" alt="Ibuilt">
+                    </div>
                     <div class="product-price">Starting ₹249</div>
                     <h3 class="product-name">Ibuilt</h3>
                     <a href="#" class="see-more">See all offers</a>
                 </div>
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="phone-holder.png" alt="Holder">
+                    </div>
                     <div class="product-price">Starting ₹149</div>
                     <h3 class="product-name">Holder</h3>
                     <a href="#" class="see-more">See all offers</a>
@@ -122,14 +152,23 @@
             <h2 class="section-title">Under ₹499 | Deals on Home Improvement Essentials</h2>
             <div class="product-grid">
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="shower.png" alt="Bathroom Section">
+                    </div>
                     <h3 class="product-name">Bathroom Section</h3>
                     <a href="#" class="see-more">Explore all</a>
                 </div>
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="tiles.png" alt="Home Titles">
+                    </div>
                     <h3 class="product-name">Home Titles</h3>
                     <a href="#" class="see-more">Explore all</a>
                 </div>
                 <div class="product-card">
+                    <div class="product-image">
+                        <img src="lamp.jpg" alt="Hotelpieces">
+                    </div>
                     <h3 class="product-name">Hotelpieces</h3>
                     <a href="#" class="see-more">Explore all</a>
                 </div>
